--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "bootstrap": "3.3.7",
+    "bootstrap-toggle": "^2.2.2",
     "bpmn-js": "^3.2.3",
     "classlist.js": "^1.1.20150312",
     "codemirror": "^5.37.0",
