Add missing jexcel js and css

--- a/angular.json
+++ b/angular.json
@@ -28,10 +28,12 @@
               "node_modules/bootstrap-toggle/css/bootstrap-toggle.css",
               "node_modules/font-awesome/css/font-awesome.css",
               "node_modules/codemirror/lib/codemirror.css",
+              "node_modules/jexcel/dist/css/jquery.jexcel.css",
               "src/styles.less"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
+              "node_modules/jexcel/dist/js/jquery.jexcel.js",
               "node_modules/bootstrap/dist/js/bootstrap.js",
               "node_modules/bootstrap-toggle/js/bootstrap-toggle.js",
               "node_modules/codemirror/lib/codemirror.js",
